# gbe-envoy

./: .gitignore  AGENTS.md  CI.md  Cargo.toml  E2E_TEST.md  README.md  STATUS.md  justfile
.beads/: issues.jsonl
.beads/export-state/: a9ef8cb952b2ea56.json
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
adapter/: Cargo.toml
adapter/examples/: automated_e2e.rs  e2e_test.rs
adapter/src/: main.rs  router_connection.rs
buffer/: Cargo.toml
buffer/benches/: buffer_bench.rs
buffer/src/: lib.rs  main.rs  ring.rs  rope.rs
client/: Cargo.toml
client/examples/: demo_client.rs
client/src/: main.rs  router_connection.rs
docs/: COMMIT_WORKFLOW.md  MANUAL_TEST_GUIDE.md  PHASE_2_TESTING.md  README.md  beads-export.sql
docs/design/: protocol-v1.md
notes/: ARCHITECTURE.md  ARCHITECTURE_V1_LAYERED.md  ARCHITECTURE_V2_ADAPTER_CENTRIC.md  BUG_REPORT.md  E2E_TEST.md  FUTURE_ENHANCEMENTS.md  INTEGRATION_TEST_SUMMARY.md  LINE_STREAM_VISION.md  PHASE_1.md  PHASE_1_COMPLETE.md  PHASE_1_TO_2_TRANSITION.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PLAN.md  README.md  SESSION_HANDOFF.md  TESTING.md  TEST_RESULTS.md  TOOLS.md  VISION_FULL_MULTIPLE_INTERFACES.md
notes/diary/: 2026-02-07-command-messagesynccommand-message.txt  2026-02-07_vision_breakthrough.md
protocol/: Cargo.toml
protocol/examples/: protocol_demo.rs
protocol/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: main.rs
router/: Cargo.toml
router/examples/: test_client.rs
router/src/: connection.rs  main.rs
router/tests/: e2e_full_stack.rs  e2e_multi_client.rs  integration_test.rs  test_harness.rs
scripts/: test_interactive.sh  test_simple.sh
tests/: INTEGRATION_FINDINGS.md  INTEGRATION_STATUS.md
