[workspace]
members = [
    "client",
    "common",
    "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Taylor <bear@bear.im>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
