[workspace]
members = [
    "protocol",
    "router",
    "adapter",
    "buffer",
    "client",
    "proxy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GrayBear <bear@graybear.io>"]
license = "MIT"

[workspace.dependencies]
# Shared protocol library
gbe-protocol = { path = "protocol" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI (for client)
ratatui = "0.30"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
