[package]
name = "gbe-buffer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "gbe_buffer"
path = "src/lib.rs"

[[bin]]
name = "gbe-buffer"
path = "src/main.rs"

[[bench]]
name = "buffer_bench"
harness = false

[dependencies]
gbe-protocol = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
