[package]
name = "gbe-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gbe-proxy"
path = "src/main.rs"

[dependencies]
gbe-protocol = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
