[package]
name = "gbe-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gbe-router"
path = "src/main.rs"

[dependencies]
gbe-protocol = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
